// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`services > file > downloadFile > success 1`] = `
{
  "Body": {
    "pipe": [MockFunction spy],
  },
}
`;

exports[`services > file > getFilesByIds > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction spy],
    },
    "avScan": [],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByIds > success with scans mapped 1`] = `
[
  {
    "_id": "123",
    "avScan": [
      {
        "fileId": "123",
      },
      {
        "fileId": "123",
      },
    ],
    "example": "file",
  },
  {
    "_id": "321",
    "avScan": [
      {
        "fileId": "321",
      },
    ],
    "example": "file",
  },
]
`;

exports[`services > file > getFilesByModel > success 1`] = `
[
  {
    "_id": {
      "toString": [MockFunction spy],
    },
    "example": "file",
  },
]
`;

exports[`services > file > removeFile > success 1`] = `
{
  "_id": {
    "toString": [MockFunction spy] {
      "calls": [
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > updateFile > success 1`] = `
{
  "_id": {
    "toString": [MockFunction spy] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > updateFile > success multiple params 1`] = `
{
  "_id": {
    "toString": [MockFunction spy] {
      "calls": [
        [],
        [],
      ],
      "results": [
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
        {
          "type": "return",
          "value": "73859F8D26679D2E52597326",
        },
      ],
    },
  },
  "id": "73859F8D26679D2E52597326",
  "modelId": "testModel",
}
`;

exports[`services > file > uploadFile > success 1`] = `
{
  "_id": [MockFunction spy],
  "aggregate": [MockFunction spy],
  "avScan": {
    "aggregate": [MockFunction spy],
    "delete": [MockFunction spy],
    "deleteMany": [MockFunction spy],
    "find": [MockFunction spy] {
      "calls": [
        [
          {
            "fileId": "function(...s) {
    let n = T(t);
    n.called = !0, n.callCount++, n.calls.push(s);
    let d = n.next.shift();
    if (d) {
      n.results.push(d);
      let [a, i] = d;
      if (a === "ok")
        return i;
      throw i;
    }
    let o, c = "ok", p = n.results.length;
    if (n.impl)
      try {
        new.target ? o = Reflect.construct(n.impl, s, new.target) : o = n.impl.apply(this, s), c = "ok";
      } catch (a) {
        throw o = a, c = "error", n.results.push([c, a]), a;
      }
    let g = [c, o];
    return w(o) && o.then(
      (a) => n.resolves[p] = ["ok", a],
      (a) => n.resolves[p] = ["error", a]
    ), n.results.push(g), o;
  }",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOne": [MockFunction spy],
  },
  "delete": [MockFunction spy],
  "find": [MockFunction spy],
  "findOneAndDelete": [MockFunction spy],
  "findOneAndUpdate": [MockFunction spy],
  "group": [MockFunction spy],
  "id": "function(...s) {
    let n = T(t);
    n.called = !0, n.callCount++, n.calls.push(s);
    let d = n.next.shift();
    if (d) {
      n.results.push(d);
      let [a, i] = d;
      if (a === "ok")
        return i;
      throw i;
    }
    let o, c = "ok", p = n.results.length;
    if (n.impl)
      try {
        new.target ? o = Reflect.construct(n.impl, s, new.target) : o = n.impl.apply(this, s), c = "ok";
      } catch (a) {
        throw o = a, c = "error", n.results.push([c, a]), a;
      }
    let g = [c, o];
    return w(o) && o.then(
      (a) => n.resolves[p] = ["ok", a],
      (a) => n.resolves[p] = ["error", a]
    ), n.results.push(g), o;
  }",
  "match": [MockFunction spy],
  "save": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": {
          "_id": [MockFunction spy],
          "aggregate": [MockFunction spy],
          "delete": [MockFunction spy],
          "find": [MockFunction spy],
          "findOneAndDelete": [MockFunction spy],
          "findOneAndUpdate": [MockFunction spy],
          "group": [MockFunction spy],
          "match": [MockFunction spy],
          "save": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
          "size": 100,
          "toObject": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
        },
      },
    ],
  },
  "size": 100,
  "toObject": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": {
          "_id": [MockFunction spy],
          "aggregate": [MockFunction spy],
          "delete": [MockFunction spy],
          "find": [MockFunction spy],
          "findOneAndDelete": [MockFunction spy],
          "findOneAndUpdate": [MockFunction spy],
          "group": [MockFunction spy],
          "match": [MockFunction spy],
          "save": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
          "size": 100,
          "toObject": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
        },
      },
    ],
  },
}
`;

exports[`services > file > uploadFile > virus scan initialised 1`] = `
{
  "_id": [MockFunction spy],
  "aggregate": [MockFunction spy],
  "avScan": {
    "aggregate": [MockFunction spy],
    "delete": [MockFunction spy],
    "deleteMany": [MockFunction spy],
    "find": [MockFunction spy] {
      "calls": [
        [
          {
            "fileId": "function(...s) {
    let n = T(t);
    n.called = !0, n.callCount++, n.calls.push(s);
    let d = n.next.shift();
    if (d) {
      n.results.push(d);
      let [a, i] = d;
      if (a === "ok")
        return i;
      throw i;
    }
    let o, c = "ok", p = n.results.length;
    if (n.impl)
      try {
        new.target ? o = Reflect.construct(n.impl, s, new.target) : o = n.impl.apply(this, s), c = "ok";
      } catch (a) {
        throw o = a, c = "error", n.results.push([c, a]), a;
      }
    let g = [c, o];
    return w(o) && o.then(
      (a) => n.resolves[p] = ["ok", a],
      (a) => n.resolves[p] = ["error", a]
    ), n.results.push(g), o;
  }",
          },
        ],
      ],
      "results": [
        {
          "type": "return",
          "value": [Circular],
        },
      ],
    },
    "findOne": [MockFunction spy],
  },
  "delete": [MockFunction spy],
  "find": [MockFunction spy],
  "findOneAndDelete": [MockFunction spy],
  "findOneAndUpdate": [MockFunction spy],
  "group": [MockFunction spy],
  "id": "function(...s) {
    let n = T(t);
    n.called = !0, n.callCount++, n.calls.push(s);
    let d = n.next.shift();
    if (d) {
      n.results.push(d);
      let [a, i] = d;
      if (a === "ok")
        return i;
      throw i;
    }
    let o, c = "ok", p = n.results.length;
    if (n.impl)
      try {
        new.target ? o = Reflect.construct(n.impl, s, new.target) : o = n.impl.apply(this, s), c = "ok";
      } catch (a) {
        throw o = a, c = "error", n.results.push([c, a]), a;
      }
    let g = [c, o];
    return w(o) && o.then(
      (a) => n.resolves[p] = ["ok", a],
      (a) => n.resolves[p] = ["error", a]
    ), n.results.push(g), o;
  }",
  "match": [MockFunction spy],
  "save": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": {
          "_id": [MockFunction spy],
          "aggregate": [MockFunction spy],
          "delete": [MockFunction spy],
          "find": [MockFunction spy],
          "findOneAndDelete": [MockFunction spy],
          "findOneAndUpdate": [MockFunction spy],
          "group": [MockFunction spy],
          "match": [MockFunction spy],
          "save": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
          "size": 100,
          "toObject": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
        },
      },
    ],
  },
  "size": 100,
  "toObject": [MockFunction spy] {
    "calls": [
      [],
    ],
    "results": [
      {
        "type": "return",
        "value": {
          "_id": [MockFunction spy],
          "aggregate": [MockFunction spy],
          "delete": [MockFunction spy],
          "find": [MockFunction spy],
          "findOneAndDelete": [MockFunction spy],
          "findOneAndUpdate": [MockFunction spy],
          "group": [MockFunction spy],
          "match": [MockFunction spy],
          "save": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
          "size": 100,
          "toObject": [MockFunction spy] {
            "calls": [
              [],
            ],
            "results": [
              {
                "type": "return",
                "value": [Circular],
              },
            ],
          },
        },
      },
    ],
  },
}
`;

exports[`services > file > uploadFile > virus scan initialised 2`] = `[]`;
